[gd_scene load_steps=2 format=3 uid="uid://hex_tile_scene_001"]

[ext_resource type="Script" path="res://scripts/ui/territory/HexTile.gd" id="1_hex_tile"]

[node name="HexTile" type="Control"]
custom_minimum_size = Vector2(80, 92)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hex_tile")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -21.0
offset_right = 20.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="IconLabel" type="Label" parent="CenterContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TierLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="LockIndicator" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 56.0
offset_top = 2.0
offset_right = 76.0
offset_bottom = 22.0
text = "ðŸ”’"
horizontal_alignment = 1
vertical_alignment = 0
